updates to html css and a new file

--- a/practice.html
+++ b/practice.html
@@ -3,12 +3,15 @@
 <head>
 	<title>CSS Practice</title>
 	<link rel="stylesheet" type="text/css" href="practice.css">
+	<link rel="stylesheet" type="text/css" href="reset.css">
 </head>
 <body>
 	<div class="container">
 		<header> <h1> Happy </h1> </header>
 		<div id="hello-fixed">
 			hello
+			<div id="orange"> orange 
+			</div>
 		</div>
 		<div id="floats">
 			
